tests/errors/compiler/continue_not_in_loop/continue_after_return.c
int main()
{
	print("before");
	continue;
	return 0;
	print("after");
}
